<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_element_settings_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstSettings.SettingsActivity">

    <View
        android:id="@+id/view1"
        android:layout_width="230sp"
        android:layout_height="230sp"
        android:layout_marginTop="-100dp"
        android:alpha="0.5"
        android:background="@drawable/circle_shape_fragment1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:alpha="0.5"
        android:layout_width="230sp"
        android:layout_height="230sp"
        android:layout_marginStart="-100dp"
        android:background="@drawable/circle_shape_fragment2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/SCHEDULE_DAYS"
        android:layout_width="match_parent"
        android:layout_height="56sp">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@android:style/Widget.Holo.PopupMenu">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:paddingTop="6sp"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:fontFamily="@font/poppinsbold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    />
            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:gravity="center_horizontal"
        android:text="Введите данные для регистрации"
        android:textColor="@color/GREY"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:gravity="center_horizontal"
        android:text="Добро пожаловать"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_First_Name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_First_Name"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/First_Name"
            app:endIconMode="clear_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Second_Name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_First_Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_Second_Name"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/Second_Name"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Second_Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_Password"
            android:inputType="textPassword"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Password_Confirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_Password_Confirm"
            android:layout_width="300sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_Password"
            app:endIconMode="clear_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/BUTTON_CONFIRM"
        android:text="Подтвердить"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Password_Confirm"/>


</androidx.constraintlayout.widget.ConstraintLayout>